# automate_workflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  project-orchestrator.yml
orchestrator/: __init__.py  __main__.py  artifacts.py  cli.py  gates.py
orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
orchestrator/llm/: __init__.py  base.py  github_models.py
orchestrator/stages/: __init__.py  clarify.py  design.py  finalize.py  plan.py  review.py  solutions.py
project/: 01_goals.md  02_requirements.md
project/templates/: 02_requirements.md  03_solution_options.md  04_design.md  05_plan.md  07_verification.md  08_review.md  09_human_checklist.md
tests/: test_artifacts.py  test_clarify.py  test_cli.py  test_gates.py  test_llm_provider.py
