[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
version = "0.1.0"
description = "Auto project workflow orchestrator with pluggable LLM providers"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
